--- a/UniversalDataCollector/Views/MainWindow.xaml
+++ b/UniversalDataCollector/Views/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window
-    x:Class="UniversalDataCollector.MainWindow"
+    x:Class="UniversalDataCollector.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="通用数据采集器 (WPF)"
+    Title="通用数据采集器 (Universal Data Collector)"
     Width="900"
     Height="600">
     <Grid>
@@ -16,16 +16,32 @@
         <Border
             Grid.Row="0"
             Padding="10"
-            Background="#EEEEEE">
+            Background="#F0F0F0">
             <DockPanel>
-                <Button
-                    Width="100"
-                    Height="25"
-                    Click="BtnOpenConfig_Click"
-                    Content="打开配置文件"
-                    DockPanel.Dock="Right" />
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock FontWeight="Bold" Text="状态: " />
+                <StackPanel DockPanel.Dock="Left" Orientation="Horizontal">
+                    <Button
+                        Height="30"
+                        Margin="0,0,10,0"
+                        Padding="10,0"
+                        BorderBrush="#007ACC"
+                        Command="{Binding OpenMonitorSettingsCommand}"
+                        Content="📂 数据源设置 (采集地址)"
+                        FontWeight="Bold" />
+
+                    <Button
+                        Height="30"
+                        Padding="10,0"
+                        BorderBrush="#CA5100"
+                        Command="{Binding OpenMesSettingsCommand}"
+                        Content="☁️ MES接口设置"
+                        FontWeight="Bold" />
+                </StackPanel>
+
+                <StackPanel
+                    VerticalAlignment="Center"
+                    DockPanel.Dock="Right"
+                    Orientation="Horizontal">
+                    <TextBlock FontWeight="Bold" Text="当前状态: " />
                     <TextBlock
                         Margin="5,0,0,0"
                         Foreground="Blue"
@@ -37,35 +53,28 @@
         <GroupBox
             Grid.Row="1"
             Margin="5"
-            Header="已上传数据 (最近100条)">
+            Header="已上传数据监控">
             <DataGrid
+                AlternatingRowBackground="#F8F8F8"
                 AutoGenerateColumns="True"
                 CanUserAddRows="False"
                 GridLinesVisibility="All"
                 HeadersVisibility="Column"
                 IsReadOnly="True"
-                ItemsSource="{Binding GridData}">
-                <DataGrid.Resources>
-                    <Style TargetType="DataGridColumnHeader">
-                        <Setter Property="Padding" Value="5" />
-                        <Setter Property="FontWeight" Value="Bold" />
-                    </Style>
-                </DataGrid.Resources>
-            </DataGrid>
+                ItemsSource="{Binding GridData}" />
         </GroupBox>
 
         <GridSplitter
             Grid.Row="2"
             Height="5"
             HorizontalAlignment="Stretch"
-            Background="Gray" />
+            Background="LightGray" />
 
         <GroupBox
             Grid.Row="3"
             Margin="5"
-            Header="实时日志">
+            Header="运行日志">
             <ListBox
-                Background="#F9F9F9"
                 FontFamily="Consolas"
                 FontSize="12"
                 ItemsSource="{Binding Logs}" />
