--- a/UniversalDataCollector/Views/MesSettingWindow.xaml
+++ b/UniversalDataCollector/Views/MesSettingWindow.xaml
@@ -1,64 +1,148 @@
-﻿<Window x:Class="UniversalDataCollector.Views.MesSettingWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        Title="MES 接口与字段映射配置 (完整版)" Height="550" Width="700" WindowStartupLocation="CenterScreen">
-    <Grid Margin="15">
+﻿<Window
+    x:Class="UniversalDataCollector.Views.MesSettingWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:vm="clr-namespace:UniversalDataCollector.ViewModels"
+    Title="MES 上传映射配置"
+    Width="750"
+    Height="500"
+    Background="#F5F5F5"
+    WindowStartupLocation="CenterScreen">
+
+    <Window.DataContext>
+        <vm:MesSettingViewModel />
+    </Window.DataContext>
+
+    <Grid Margin="20">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <GroupBox Header="MES 服务器设置" Grid.Row="0" Padding="10">
+        <GroupBox
+            Grid.Row="0"
+            Margin="0,0,0,15"
+            Padding="10"
+            Header="接口配置">
             <StackPanel>
-                <TextBlock Text="MES 上传接口地址 (URL):" Margin="0,0,0,5" />
-                <TextBox Text="{Binding MesApiUrl}" Padding="5" />
+                <TextBlock
+                    Margin="0,0,0,5"
+                    Foreground="#333"
+                    Text="MES 接口 API 地址:" />
+                <TextBox
+                    Height="28"
+                    VerticalContentAlignment="Center"
+                    Text="{Binding Config.MesApiUrl, UpdateSourceTrigger=PropertyChanged}" />
             </StackPanel>
         </GroupBox>
 
-        <GroupBox Header="字段映射配置 (CSV列 -> MES字段)" Grid.Row="1" Margin="0,15,0,0">
-            <DataGrid ItemsSource="{Binding Mappings}"
-                      AutoGenerateColumns="False"
-                      CanUserAddRows="True"
-                      Margin="5"
-                      RowHeight="30">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="MES字段名" Binding="{Binding MesFieldName}" Width="150" />
+        <StackPanel
+            Grid.Row="1"
+            Margin="0,0,0,10"
+            Orientation="Horizontal">
+            <Button
+                Width="120"
+                Height="30"
+                Background="#007ACC"
+                BorderThickness="0"
+                Command="{Binding AddMappingCommand}"
+                Foreground="White">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Margin="0,0,5,0" Text="➕" />
+                    <TextBlock Text="添加字段映射" />
+                </StackPanel>
+            </Button>
+            <TextBlock
+                Margin="15,0,0,0"
+                VerticalAlignment="Center"
+                FontStyle="Italic"
+                Foreground="#666"
+                Text="* 提示：CSV列索引从0开始（0=第1列）" />
+        </StackPanel>
 
-                    <DataGridTextColumn Header="CSV列索引" Binding="{Binding ColumnIndex}" Width="80" />
+        <DataGrid
+            Grid.Row="2"
+            AutoGenerateColumns="False"
+            Background="White"
+            BorderBrush="#DDD"
+            CanUserAddRows="False"
+            HorizontalGridLinesBrush="#EEE"
+            ItemsSource="{Binding Config.Mappings}"
+            RowHeight="32"
+            VerticalGridLinesBrush="#EEE">
+            <DataGrid.Columns>
+                <DataGridTextColumn
+                    Width="*"
+                    Binding="{Binding MesFieldName, UpdateSourceTrigger=PropertyChanged}"
+                    Header="MES 字段名" />
 
-                    <DataGridComboBoxColumn Header="数据类型" SelectedItemBinding="{Binding DataType}" Width="100">
-                        <DataGridComboBoxColumn.ItemsSource>
-                            <x:Array Type="{x:Type sys:String}">
-                                <sys:String>String</sys:String>
-                                <sys:String>Int</sys:String>
-                                <sys:String>Double</sys:String>
-                                <sys:String>DateTime</sys:String>
-                            </x:Array>
-                        </DataGridComboBoxColumn.ItemsSource>
-                    </DataGridComboBoxColumn>
+                <DataGridTextColumn
+                    Width="100"
+                    Binding="{Binding ColumnIndex, UpdateSourceTrigger=PropertyChanged}"
+                    Header="CSV 列索引" />
 
-                    <DataGridTextColumn Header="默认值" Binding="{Binding DefaultValue}" Width="80" />
+                <DataGridTemplateColumn Width="120" Header="数据类型">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <ComboBox
+                                BorderThickness="0"
+                                SelectedValue="{Binding DataType, UpdateSourceTrigger=PropertyChanged}"
+                                SelectedValuePath="Content">
+                                <ComboBoxItem Content="String" />
+                                <ComboBoxItem Content="Int" />
+                                <ComboBoxItem Content="Double" />
+                                <ComboBoxItem Content="DateTime" />
+                            </ComboBox>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
 
-                    <DataGridTemplateColumn Header="操作" Width="80">
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <Button Content="删除"
-                                        Background="#FFEEEE" Foreground="Red" BorderBrush="Red"
-                                        Padding="5,0"
-                                        Command="{Binding DataContext.DeleteCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
-                                        CommandParameter="{Binding}" />
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-                </DataGrid.Columns>
-            </DataGrid>
-        </GroupBox>
+                <DataGridTextColumn
+                    Width="100"
+                    Binding="{Binding DefaultValue, UpdateSourceTrigger=PropertyChanged}"
+                    Header="默认值" />
 
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,15,0,0">
-            <TextBlock Text="* 修改后请点击保存并重启" VerticalAlignment="Center" Foreground="Gray" Margin="0,0,10,0" />
-            <Button Content="保存配置并重启" Command="{Binding SaveCommand}" Width="150" Height="35" Background="#DDDDDD" />
+                <DataGridTemplateColumn Width="60" Header="操作">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button
+                                Background="Transparent"
+                                BorderThickness="0"
+                                Command="{Binding DataContext.DeleteMappingCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+                                CommandParameter="{Binding}"
+                                Content="删除"
+                                Cursor="Hand"
+                                Foreground="Red" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <StackPanel
+            Grid.Row="3"
+            Margin="0,20,0,0"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal">
+            <Button
+                Width="100"
+                Height="32"
+                Margin="0,0,10,0"
+                Background="#4CAF50"
+                BorderThickness="0"
+                Command="{Binding SaveCommand}"
+                Content="保存配置"
+                Foreground="White" />
+
+            <Button
+                Width="80"
+                Height="32"
+                Background="#DDD"
+                BorderThickness="0"
+                Click="Close_Click"
+                Content="关闭" />
         </StackPanel>
     </Grid>
 </Window>
