--- a/UniversalDataCollector/Views/MonitorSettingWindow.xaml
+++ b/UniversalDataCollector/Views/MonitorSettingWindow.xaml
@@ -1,60 +1,192 @@
-﻿<Window x:Class="UniversalDataCollector.Views.MonitorSettingWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="clr-namespace:UniversalDataCollector.ViewModels"
-        Title="监控配置" Height="500" Width="550" WindowStartupLocation="CenterScreen">
-
+﻿<Window
+    x:Class="UniversalDataCollector.Views.MonitorSettingWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:vm="clr-namespace:UniversalDataCollector.ViewModels"
+    Title="监控路径配置"
+    Width="600"
+    Height="550"
+    Background="#F0F0F0"
+    WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <vm:MonitorSettingViewModel />
     </Window.DataContext>
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-    <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <StackPanel Margin="20">
-            <GroupBox Header="监控模式" Margin="0,0,0,15" Padding="10">
-                <StackPanel Orientation="Horizontal">
-                    <RadioButton Content="单文件监控" IsChecked="{Binding IsFileMode}" Margin="0,0,20,0" />
-                    <RadioButton Content="文件夹监控" IsChecked="{Binding IsFolderMode}" />
-                </StackPanel>
-            </GroupBox>
-
-            <GroupBox Header="单文件设置" Margin="0,0,0,15" Padding="10" IsEnabled="{Binding IsFileMode}">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-                    <TextBox Text="{Binding TargetFilePath, UpdateSourceTrigger=PropertyChanged}" Height="28" VerticalContentAlignment="Center" />
-                    <Button Grid.Column="1" Content="浏览..." Click="SelectFile_Click" Width="60" Margin="5,0,0,0" />
-                </Grid>
-            </GroupBox>
-
-            <GroupBox Header="文件夹设置" Margin="0,0,0,15" Padding="10" IsEnabled="{Binding IsFolderMode}">
-                <StackPanel>
-                    <TextBlock Text="目录路径:" Margin="0,0,0,5" />
-                    <Grid Margin="0,0,0,10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <TextBox Text="{Binding TargetFolderPath, UpdateSourceTrigger=PropertyChanged}" Height="28" VerticalContentAlignment="Center" />
-                        <Button Grid.Column="1" Content="选择..." Click="SelectFolder_Click" Width="60" Margin="5,0,0,0" />
-                    </Grid>
-                    <TextBlock Text="文件名过滤 (如 *.csv):" Margin="0,0,0,5" />
-                    <TextBox Text="{Binding FileNamePattern, UpdateSourceTrigger=PropertyChanged}" Height="28" VerticalContentAlignment="Center" />
-                </StackPanel>
-            </GroupBox>
-
-            <GroupBox Header="扫描频率" Margin="0,0,0,20" Padding="10">
-                <StackPanel>
-                    <Slider Minimum="1" Maximum="60" Value="{Binding IntervalSeconds}" TickFrequency="1" IsSnapToTickEnabled="True" />
-                    <TextBlock Text="{Binding IntervalSeconds, StringFormat={}{0} 秒}" HorizontalAlignment="Right" Margin="0,5,0,0" />
-                </StackPanel>
-            </GroupBox>
-
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Content="保存并重启" Command="{Binding SaveCommand}" Width="100" Height="30" Background="#4CAF50" Foreground="White" BorderThickness="0" Margin="0,0,10,0" />
-                <Button Content="取消" Click="Close_Click" Width="80" Height="30" />
+        <GroupBox
+            Grid.Row="0"
+            Margin="0,0,0,15"
+            Padding="10"
+            Background="White"
+            Header="工作模式">
+            <StackPanel Orientation="Horizontal">
+                <RadioButton
+                    Margin="0,0,20,0"
+                    VerticalContentAlignment="Center"
+                    Content="单文件监控 (追加模式)"
+                    IsChecked="{Binding IsFileMode}" />
+                <RadioButton
+                    VerticalContentAlignment="Center"
+                    Content="文件夹监控 (批量模式)"
+                    IsChecked="{Binding IsFolderMode}" />
             </StackPanel>
+        </GroupBox>
+
+        <GroupBox
+            Grid.Row="1"
+            Margin="0,0,0,15"
+            Padding="10"
+            Background="White"
+            Header="单文件设置"
+            IsEnabled="{Binding IsFileMode}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="80" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <TextBlock VerticalAlignment="Center" Text="目标文件:" />
+                <TextBox
+                    Grid.Column="1"
+                    Height="26"
+                    Margin="5,0"
+                    VerticalContentAlignment="Center"
+                    Text="{Binding TargetFilePath, UpdateSourceTrigger=PropertyChanged}" />
+                <Button
+                    Grid.Column="2"
+                    Width="70"
+                    Height="26"
+                    Click="SelectFile_Click"
+                    Content="浏览..." />
+            </Grid>
+        </GroupBox>
+
+        <GroupBox
+            Grid.Row="2"
+            Margin="0,0,0,15"
+            Padding="10"
+            Background="White"
+            Header="文件夹设置"
+            IsEnabled="{Binding IsFolderMode}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="10" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="80" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock
+                    Grid.Row="0"
+                    VerticalAlignment="Center"
+                    Text="监控目录:" />
+                <TextBox
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Height="26"
+                    Margin="5,0"
+                    VerticalContentAlignment="Center"
+                    Text="{Binding TargetFolderPath, UpdateSourceTrigger=PropertyChanged}" />
+                <Button
+                    Grid.Row="0"
+                    Grid.Column="2"
+                    Width="70"
+                    Height="26"
+                    Click="SelectFolder_Click"
+                    Content="选择目录" />
+
+                <TextBlock
+                    Grid.Row="2"
+                    VerticalAlignment="Center"
+                    Text="文件后缀:" />
+                <TextBox
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Height="26"
+                    Margin="5,0"
+                    VerticalContentAlignment="Center"
+                    Text="{Binding FileNamePattern, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBlock
+                    Grid.Row="2"
+                    Grid.Column="2"
+                    Margin="10,0,0,0"
+                    VerticalAlignment="Center"
+                    Foreground="Gray"
+                    Text="(如 *.xlsx)" />
+            </Grid>
+        </GroupBox>
+
+        <GroupBox
+            Grid.Row="3"
+            Margin="0,0,0,15"
+            Padding="10"
+            Background="White"
+            Header="采集规则">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock VerticalAlignment="Center" Text="起始有效行:" />
+                <TextBox
+                    Width="50"
+                    Height="26"
+                    Margin="10,0,5,0"
+                    HorizontalContentAlignment="Center"
+                    VerticalContentAlignment="Center"
+                    FontWeight="Bold"
+                    Text="{Binding StartRowIndex, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBlock
+                    VerticalAlignment="Center"
+                    Foreground="#666666"
+                    Text="行 (例如填 6，则自动跳过前 5 行表头)" />
+            </StackPanel>
+        </GroupBox>
+
+        <GroupBox
+            Grid.Row="4"
+            Margin="0,0,0,15"
+            Padding="10"
+            Background="White"
+            Header="扫描频率">
+            <StackPanel Orientation="Horizontal">
+                <Slider
+                    Width="200"
+                    VerticalAlignment="Center"
+                    IsSnapToTickEnabled="True"
+                    Maximum="60"
+                    Minimum="1"
+                    TickFrequency="1"
+                    Value="{Binding IntervalSeconds}" />
+                <TextBlock
+                    Margin="15,0,0,0"
+                    VerticalAlignment="Center"
+                    FontWeight="Bold"
+                    Text="{Binding IntervalSeconds, StringFormat={}每 {0} 秒扫描一次}" />
+            </StackPanel>
+        </GroupBox>
+
+        <StackPanel
+            Grid.Row="6"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal">
+            <Button
+                Width="120"
+                Height="35"
+                Background="#4CAF50"
+                Command="{Binding SaveCommand}"
+                Content="保存并关闭"
+                FontSize="14"
+                Foreground="White" />
         </StackPanel>
-    </ScrollViewer>
+    </Grid>
 </Window>
